--- a/spring-greeting-app/src/main/resources/application.properties
+++ b/spring-greeting-app/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-greeting-app
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/greeting_db
+spring.datasource.username=root
+spring.datasource.password=Deep12345...
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
